<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/space1"
    tools:context="com.example.android.relaxplayer.MainActivity">

    <LinearLayout
        android:id="@+id/root"
        style="@style/LinearLayoutMainActivity">


        <TextView
            android:id="@+id/textView"
            style="@style/TitleTextView"
            android:text="@string/openingTextView" />

        <Button
            android:id="@+id/buttonSunnyBirds"
            style="@style/buttonMain"
            android:text="@string/birds" />

        <Button
            android:id="@+id/buttonAfterTheStorm"
            style="@style/buttonMain"
            android:text="@string/storm" />

        <Button
            android:id="@+id/buttonNocturnal"
            style="@style/buttonMain"
            android:text="@string/nocturnal" />

        <Button
            android:id="@+id/buttonMyLibrary"
            style="@style/buttonMain"
            android:text="@string/myLibrary" />

        <TextView
            style="@style/explanation"
            android:text="@string/mainExplanation" />


    </LinearLayout>


</ScrollView>
