<?xml version="1.0" encoding="utf-8"?>

<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorOrange2">

    <LinearLayout style="@style/screensMainLinearLayout">


        <ImageView
            android:id="@+id/imageView"
            style="@style/ImageViewMainPicture"
            app:srcCompat="@drawable/bird1" />


        <LinearLayout style="@style/LinearLayoutForSamples">

            <TextView
                android:id="@+id/sampleBird1"
                style="@style/TextViewBirds"
                android:text="@string/sampleSound1" />

            <TextView
                android:id="@+id/sampleBird2"
                style="@style/TextViewBirds"
                android:text="@string/sampleSound2" />

            <TextView
                android:id="@+id/sampleBird3"
                style="@style/TextViewBirds"
                android:text="@string/sampleSound3" />


            <ImageView
                android:id="@+id/play"
                style="@style/ImageViewForPlay"
                android:src="@drawable/ic_play_circle_filled_white" />

            <Button
                android:id="@+id/button_download"
                style="@style/downloadButton"
                android:background="@drawable/mybutton"
                android:text="@string/downloadMore" />

            <TextView
                style="@style/explanation"
                android:text="@string/birdExplanation" />
        </LinearLayout>

    </LinearLayout>

</ScrollView>