<?xml version="1.0" encoding="utf-8"?>

<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/mybutton3">

    <LinearLayout style="@style/screensMainLinearLayout">


        <ImageView
            android:id="@+id/imageView"
            style="@style/ImageViewMainPicture"
            app:srcCompat="@drawable/dowloadsmall" />


        <LinearLayout style="@style/LinearLayoutForSamples">

            <TextView
                android:id="@+id/downloadTitle"
                style="@style/TextViewForDownload"
                android:text="@string/world" />

            <TextView
                android:id="@+id/downloadSubtitle"
                style="@style/textViewForDownloadSubtitle"
                android:text="@string/visit" />


            <Button
                android:id="@+id/button_relaxplayer"
                style="@style/downloadButton"
                android:autoLink="all"
                android:background="@drawable/mybutton3"
                android:linksClickable="true"
                android:text="@string/relaxplayer" />

            <TextView
                style="@style/explanation"
                android:text="@string/downloadExplanation" />
        </LinearLayout>

    </LinearLayout>

</ScrollView>