<?xml version="1.0" encoding="utf-8"?>

<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/mybutton4">

    <LinearLayout style="@style/screensMainLinearLayout">


        <ImageView
            android:id="@+id/imageView"
            style="@style/ImageViewMainPicture"
            app:srcCompat="@drawable/librarysmall" />


        <LinearLayout
            style="@style/LinearLayoutForSamples"
            android:background="@drawable/mybutton4">

            <TextView
                android:id="@+id/album1"
                style="@style/TextViewBirds"
                android:text="@string/album1" />

            <TextView
                android:id="@+id/album2"
                style="@style/TextViewBirds"
                android:text="@string/album2" />

            <TextView
                android:id="@+id/album3"
                style="@style/TextViewBirds"
                android:text="@string/album3" />


            <ImageView
                android:id="@id/play"
                style="@style/ImageViewForPlay"
                android:src="@drawable/ic_play_circle_filled_white" />



            <TextView
                style="@style/explanation"
                android:text="@string/myLibraryExplanation" />
        </LinearLayout>

    </LinearLayout>

</ScrollView>