<?xml version="1.0" encoding="utf-8"?>

<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorDarkBlue"
    android:fillViewport="true">

    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        style="@style/screensMainLinearLayout">


        <ImageView
            android:id="@+id/imageView"
            style="@style/ImageViewMainPicture"
            app:srcCompat="@drawable/nowplayingsmall" />


        <LinearLayout style="@style/LinearLayoutForSamples">

            <TextView
                android:id="@+id/Artist"
                style="@style/textViewForArtist"
                android:text="@string/artist" />

            <TextView
                android:id="@+id/title_song"
                style="@style/textViewForTitle"
                android:text="@string/title_of_the_song" />


            <LinearLayout style="@style/linearLayoutForControlPanel">

                <ImageView
                    style="@style/controlButton"
                    android:src="@drawable/ic_fast_rewind" />

                <ImageView
                    style="@style/controlButton"
                    android:src="@drawable/ic_skip_previous" />

                <ImageView
                    style="@style/controlButton"
                    android:src="@drawable/ic_play_circle_filled_white" />

                <ImageView
                    style="@style/controlButton"
                    android:src="@drawable/ic_skip_next" />

                <ImageView
                    style="@style/controlButton"
                    android:src="@drawable/ic_fast_forward" />

            </LinearLayout>

            <TextView
                style="@style/explanation"
                android:text="@string/nowPlayingExplanation" />
        </LinearLayout>

    </LinearLayout>

</ScrollView>